--- a/src/app/kitten/kitten.component.html
+++ b/src/app/kitten/kitten.component.html
@@ -29,7 +29,7 @@
         <div class="col-md-8">
           <h2 class="mt-4">
             <img src="assets/img/popCat.png" alt="adopt me" class="icon" />
-            Adopte moi !
+            Chaton(s) Disponible(s) !
           </h2>
           <div *ngIf="!CatPresentInDaHouse" class="text-center">
             <img
