setting up exigence quest

--- a/src/app/kitten/kitten.component.html
+++ b/src/app/kitten/kitten.component.html
@@ -47,6 +47,7 @@
               class="cuteKittenCard"
             >
               <p><span>Son p'tit nom :</span> {{ kitten.name }}</p>
+              <p><span>Son p'tit surnom :</span> {{ kitten.surname }}</p>
               <p><span>Son espèce :</span> {{ kitten.race }} <br /></p>
               <p><span>Sa date de naissance :</span> {{ kitten.birthdate }}</p>
               <br>
